objects/PC_Suspect_Prescription__c.object
<CustomObject>
    <description>Drug prescribed that is associated with an Adverse Event</description>
    <fields>
        <fullName>PC_Abated_After_Use_Stopped_or_Reduced__c</fullName>
        <description>Event Abated after use stopped or dosage reduced flag</description>
        <label>Abated After Use Stopped or Reduced?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Doesn&apos;t apply</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_Adverse_Event2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup field to associated Adverse Event.</description>
        <label>Adverse Event 2</label>
        <referenceTo>PC_AdverseEvent2__c</referenceTo>
        <relationshipLabel>Suspect Prescriptions</relationshipLabel>
        <relationshipName>Suspect_Prescriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PC_Adverse_Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup field to associated Adverse Event.</description>
        <label>Adverse Event</label>
        <referenceTo>PC_AdverseEvent__c</referenceTo>
        <relationshipLabel>Suspect Prescriptions</relationshipLabel>
        <relationshipName>Suspect_Prescriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PC_Combination_Product_Report__c</fullName>
        <description>Combination Product Report Flag</description>
        <label>Combination Product Report</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_Concomitant_Medical_Products__c</fullName>
        <description>Name of the Concomitant Medical Product and the therapy dates.</description>
        <label>Concomitant Medical Prod &amp; Therapy Dates</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Dose__c</fullName>
        <description>The dosage information that caused the adverse event.</description>
        <label>Dosage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Drug_NDC__c</fullName>
        <description>Indicates National Drug Code.</description>
        <label>NDC #</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Event_Reappeared_After_Reintroduction__c</fullName>
        <description>Event Reappeared after Reintroduction flag.</description>
        <label>Event Reappeared After Reintroduction?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Doesn&apos;t apply</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_Expiration_Date__c</fullName>
        <description>Indicates the expiry date of the product.</description>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PC_Frequency__c</fullName>
        <description>Frequency at which the patient used the product.</description>
        <label>Frequency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Indication_for_Product_Use__c</fullName>
        <description>The symptom of the disease for which the product was prescribed for or used by the particular patient.</description>
        <label>Diagnosis of Use (Indication)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Prescription__c</fullName>
        <description>Prescription</description>
        <label>Prescription</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Product_Compounded__c</fullName>
        <description>Indicates if the product was compounded.</description>
        <label>Is the Product Compounded?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_Product_Lot__c</fullName>
        <description>Indicates the lot number of the product used by the patient.</description>
        <label>Lot #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Product_Manufacturer__c</fullName>
        <description>Indicates the manufacturer of the consumed product.</description>
        <label>Manufacturer</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Product_Name__c</fullName>
        <description>Indicates trade name of the suspect product.</description>
        <label>Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Product_OTC__c</fullName>
        <description>Indicates if the product is issued over-the-counter.</description>
        <label>Is the Product Over-the-Counter?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_Product_Strength__c</fullName>
        <description>Indicates the strength of the product used by the patient during the occurrence of the adverse event.</description>
        <label>Product Strength</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Product__c</fullName>
        <description>Product selected while adding Suspect Prescription</description>
        <label>Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Route_of_Administration__c</fullName>
        <description>Route in which patient consumed the product.</description>
        <label>Route of Administration</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Therapy_End_Date__c</fullName>
        <description>Indicates the  date on which the administration of the therapy ended.</description>
        <label>Therapy End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PC_Therapy_Start_Date__c</fullName>
        <description>Indicates the date on which the administration of the therapy started.</description>
        <label>Therapy Start Date</label>
        <type>Date</type>
    </fields>
    <label>Suspect Prescription</label>
    <nameField>
        <displayFormat>SP-{00000000}</displayFormat>
        <label>Suspect Product</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Suspect Prescriptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>